--- a/index.html
+++ b/index.html
@@ -285,6 +285,36 @@
         0% { transform: translateY(-10vh) rotate(0deg); opacity: 1; }
         100% { transform: translateY(110vh) rotate(720deg); opacity: 0; }
       }
+      
+      /* --- AUTH & LOGOUT TRANSITIONS --- */
+      @keyframes fade-out-down {
+        from { 
+          opacity: 1; 
+          transform: translateY(0); 
+        }
+        to { 
+          opacity: 0; 
+          transform: translateY(20px); 
+          filter: blur(4px);
+        }
+      }
+
+      @keyframes auth-fade-in {
+        from { 
+          opacity: 0; 
+        }
+        to { 
+          opacity: 1; 
+        }
+      }
+
+      .app-container-exit-active {
+        animation: fade-out-down 0.4s ease-in forwards;
+      }
+
+      .auth-screen-enter-active {
+        animation: auth-fade-in 0.6s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
