--- a/index.html
+++ b/index.html
@@ -352,6 +352,122 @@
         0%, 100% { opacity: 1; }
         50% { opacity: 0.5; }
       }
+
+      /* --- WELLNESS REPORT --- */
+      .transition-max-height {
+        transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out;
+        overflow: hidden;
+      }
+       @keyframes wellness-progress-draw {
+        from { stroke-dashoffset: var(--circumference); }
+        to { stroke-dashoffset: var(--progress-offset); }
+      }
+      .animate-wellness-progress {
+        animation: wellness-progress-draw 1s 0.3s ease-out forwards;
+      }
+      .report-card-enter {
+        opacity: 0;
+        transform: translateY(10px);
+        animation: fade-in-up 0.5s ease-out forwards;
+      }
+
+      .score-trend-up { color: #16a34a; } /* green-600 */
+      .score-trend-down { color: #dc2626; } /* red-600 */
+      .score-trend-same { color: #6b7280; } /* gray-500 */
+
+      /* --- PRINT STYLES (DEPRECATED FOR VISUAL REPORT) --- */
+      @media print {
+        body * { display: none !important; }
+      }
+
+      /* --- VISUAL WELLNESS REPORT STYLES --- */
+      .health-score-gauge-bg {
+        fill: none;
+        stroke: rgba(0,0,0,0.1);
+      }
+      .health-score-gauge-progress {
+        fill: none;
+        stroke-linecap: round;
+        transform: rotate(-90deg);
+        transform-origin: 50% 50%;
+        transition: stroke-dashoffset 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        animation: health-gauge-draw 1.2s 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+      }
+      @keyframes health-gauge-draw {
+          from { stroke-dashoffset: var(--circumference); }
+          to { stroke-dashoffset: var(--progress-offset); }
+      }
+
+      .progress-ring-bg {
+          fill: none;
+          stroke: #e5e7eb; /* gray-200 */
+      }
+      .progress-ring-progress {
+          fill: none;
+          stroke-linecap: round;
+          transform: rotate(-90deg);
+          transform-origin: 50% 50%;
+          transition: stroke-dashoffset 0.8s ease-out;
+      }
+      
+      .care-timeline {
+          position: relative;
+          padding-left: 1.25rem; /* pl-5 */
+      }
+      .care-timeline::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 14px; /* center of the icon */
+          bottom: 0;
+          width: 2px;
+          background-color: #e5e7eb; /* gray-200 */
+      }
+      .timeline-item {
+          position: relative;
+          padding-bottom: 1.5rem; /* pb-6 */
+      }
+      .timeline-item:last-child {
+          padding-bottom: 0;
+      }
+      .timeline-icon-container {
+          position: absolute;
+          left: 0;
+          top: 0;
+          transform: translateX(-50%);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 30px;
+          height: 30px;
+          border-radius: 9999px;
+          background-color: white;
+          border: 2px solid #e5e7eb;
+      }
+
+      @keyframes share-toast-in-out {
+          0% { transform: translateY(100%); opacity: 0; }
+          15% { transform: translateY(0); opacity: 1; }
+          85% { transform: translateY(0); opacity: 1; }
+          100% { transform: translateY(100%); opacity: 0; }
+      }
+      .share-toast {
+          animation: share-toast-in-out 3s ease-in-out forwards;
+      }
+
+      /* --- NEW ACTIONABLE CARE PLAN STYLES --- */
+      .difficulty-badge-easy { background-color: #dcfce7; color: #16a34a; } /* green-100/green-600 */
+      .difficulty-badge-moderate { background-color: #fef3c7; color: #d97706; } /* yellow-100/yellow-600 */
+      .difficulty-badge-professional { background-color: #fee2e2; color: #dc2626; } /* red-100/red-600 */
+
+      .product-card, .service-card {
+        background-color: #f9fafb; /* gray-50 */
+        padding: 0.75rem; /* p-3 */
+        border-radius: 0.5rem; /* rounded-lg */
+      }
+      .service-card-vet { border-left: 4px solid #3b82f6; } /* blue-500 */
+      .service-card-groomer { border-left: 4px solid #8b5cf6; } /* violet-500 */
+      .service-card-store { border-left: 4px solid #10b981; } /* emerald-500 */
     </style>
   <script type="importmap">
 {
