feat: Enhance SEO and refine types
Adds crucial meta tags for SEO and social sharing to index.html. Updates types.ts to align with Supabase table structures for professional profiles, vet services, and vendor products, improving type safety and data representation. Corrects a Supabase query syntax error in App.tsx and refactors ShopScreen.tsx to fetch product data from Supabase, making the shop dynamic.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <link rel="apple-touch-icon" href="/icon-192.png">
 
     <title>Dumble's Door - Indian Pet Care</title>
+    
+    <!-- SEO & Social Sharing Meta Tags -->
+    <meta name="description" content="An all-in-one Indian pet care app providing AI-powered health checks, vet booking, product recommendations, and a complete digital log for your pet's journey." />
+    <meta name="keywords" content="pet care, india, vet booking, pet health, ai health check, dog, cat, pet products, adoption" />
+    <meta property="og:title" content="Dumble's Door - Indian Pet Care" />
+    <meta property="og:description" content="The all-in-one app for your pet's health and happiness in India." />
+    <meta property="og:image" content="/icon-512.png" />
+    <meta property="og:url" content="https://dumbles-door-app.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
