--- a/index.html
+++ b/index.html
@@ -483,12 +483,13 @@
   <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "react": "https://esm.sh/react@^19.1.1",
+    "react-dom/client": "https://esm.sh/react-dom@^18.2.0/client",
+    "react": "https://esm.sh/react@^18.2.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
     "marked": "https://esm.sh/marked@^16.2.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.2"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.2",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
