--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
     "marked": "https://esm.sh/marked@^16.2.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.2",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
