--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         stroke-linecap: round;
         transform: rotate(-90deg);
         transform-origin: 50% 50%;
-        transition: stroke-dashoffset 0.8s ease-out;
+        transition: stroke-dashoffset 0.8s ease-out, stroke 0.8s ease;
       }
 
       @keyframes tip-fade-in {
