feat: Implement client-side routing
Integrates react-router-dom for client-side navigation, replacing the previous screen management approach. This lays the groundwork for a more robust and scalable navigation experience within the application.

Removes unused `ActiveScreen` type and associated navigation logic from components.

--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
     "marked": "https://esm.sh/marked@^16.2.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.2",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.25.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
