--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Dumble's Door">
-    <link rel="apple-touch-icon" href="/icon-192.png">
+    <link rel="apple-touch-icon" href="https://placehold.co/192x192/4FD1C5/ffffff?text=🐾">
 
     <title>Dumble's Door - Indian Pet Care</title>
     
@@ -20,7 +20,7 @@
     <meta name="keywords" content="pet care, india, vet booking, pet health, ai health check, dog, cat, pet products, adoption" />
     <meta property="og:title" content="Dumble's Door - Indian Pet Care" />
     <meta property="og:description" content="The all-in-one app for your pet's health and happiness in India." />
-    <meta property="og:image" content="/icon-512.png" />
+    <meta property="og:image" content="https://placehold.co/512x512/4FD1C5/ffffff?text=🐾" />
     <meta property="og:url" content="https://dumbles-door-app.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
