--- a/index.html
+++ b/index.html
@@ -480,17 +480,16 @@
       .service-card-groomer { border-left: 4px solid #8b5cf6; } /* violet-500 */
       .service-card-store { border-left: 4px solid #10b981; } /* emerald-500 */
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react-dom/client": "https://esm.sh/react-dom@^18.2.0/client",
-    "react": "https://esm.sh/react@^18.2.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
-    "marked": "https://esm.sh/marked@^16.2.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.2",
-    "react-router-dom": "https://esm.sh/react-router-dom@6.25.1",
+    "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/"
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.1",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.57.4",
+    "marked": "https://aistudiocdn.com/marked@^16.2.1"
   }
 }
 </script>
