--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.57.4",
-    "marked": "https://aistudiocdn.com/marked@^16.2.1"
+    "marked": "https://aistudiocdn.com/marked@^16.2.1",
+    "@vercel/speed-insights/": "https://aistudiocdn.com/@vercel/speed-insights@^1.2.0/"
   }
 }
 </script>
