--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://placehold.co/32x32/4FD1C5/ffffff?text=🐾" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Updated Viewport for Mobile Notches -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#4FD1C5" />
@@ -39,7 +41,10 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.58.0",
     "marked": "https://aistudiocdn.com/marked@^16.3.0",
-    "@vercel/speed-insights/": "https://aistudiocdn.com/@vercel/speed-insights@^1.2.0/"
+    "@vercel/speed-insights/": "https://aistudiocdn.com/@vercel/speed-insights@^1.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4"
   }
 }
 </script>
